--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^1.22.2"
 matplotlib = "^3.5.1"
 seaborn = "^0.11.2"
 sklearn = "^0.0"
+statsmodels = "^0.13.2"
 
 
 [tool.poetry.dev-dependencies]
