--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.5.1"
 seaborn = "^0.11.2"
 sklearn = "^0.0"
 statsmodels = "^0.13.2"
+yellowbrick = "^1.4"
 
 
 [tool.poetry.dev-dependencies]
