--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ seaborn = "^0.11.2"
 sklearn = "^0.0"
 statsmodels = "^0.13.2"
 yellowbrick = "^1.4"
+xgboost = "^1.5.2"
+lightgbm = "^3.3.2"
+catboost = "^1.0.4"
 
 
 [tool.poetry.dev-dependencies]
