--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ yellowbrick = "^1.4"
 xgboost = "^1.5.2"
 lightgbm = "^3.3.2"
 catboost = "^1.0.4"
+gdown = "^4.4.0"
 
 
 [tool.poetry.dev-dependencies]
