--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ gdown = "^4.4.0"
 optuna = "^2.10.0"
 ujson = "^5.1.0"
 tqdm = "^4.63.0"
+torch = "^1.11.0"
+torchvision = "^0.12.0"
 
 
 [tool.poetry.dev-dependencies]
